[package]
name = "rs_test_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
serde = "1.0.136"
serde_derive = "1.0.136"
tokio = { version = "1.19.2", features = ["full"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
